sub css 이미지 경로수정
logo, footer img 절대경로로 바꿔줌

--- a/css/bottom.css
+++ b/css/bottom.css
@@ -3,7 +3,7 @@
 
 #bottom_wrap{clear: both;  background-color: #191919; height: 230px; font-size: 15px; padding-top: 30px; width: 100%; min-width: 1000px; position: relative; overflow: hidden;}
 #bottom{margin: 0 auto; width:1300px; height: 200px;
-background: url(../images/bottom_logo2.png) no-repeat 1180px 100px;
+background: url(http://hohk.dothome.co.kr/hsy/images/bottom_logo2.png) no-repeat 1180px 100px;
 }
 
 
