--- a/css/top.css
+++ b/css/top.css
@@ -13,6 +13,12 @@ html {
     position: relative;
     min-width: 1800px;
     min-height: 900px;
+    -webkit-touch-callout: none;
+     user-select: none;
+     -moz-user-select: none;
+     -ms-user-select: none;
+     -webkit-user-select: none;
+
    }
 
 
@@ -25,6 +31,7 @@ html {
     min-width: 1800px;
     min-height: 900px;
     overflow: hidden;    
+    
 }
 
 
