sub 페이지 네비게이션 수정
마우스오버시 상단 높이에 맞춰서 네비 버튼이 활성화 될 수 있도록 삽입 및 수정했다
메인이랑 간격이 달라져서 조금 신경쓰였는데 이동하면서 체크해보니 남들은 잘 모르는 미묘한 차이였기에 일단 네비게이션은 완성짓기로함^^

--- a/css/sub.css
+++ b/css/sub.css
@@ -3,7 +3,7 @@
 
 #con_summary {margin: 0 auto; width: 1300px; margin-bottom: 50px;}
 
-.sub_title_top {margin-top: 50px; font-size: 28px; font-weight: 700;}
+.sub_title_top {margin-top: 50px; font-size: 28px; font-weight: 700; clear: both;}
 #sub{margin: 0 auto; width: 1300px;}
 .sub_title{
     display: block;
